cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_483.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/sslapitest.c:3820: error: DEAD_STORE
  The value written to &kexch_alg (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/sslapitest.c:3820:13: Write of unused value
3818.               break;
3819.           case 8:
3820.               kexch_alg = NID_ffdhe3072;
                    ^
3821.               break;
3822.           case 9:
